kubernetes/apps/services/git-mirror-operator/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitmirror-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Git Mirror"
    homepage.shamubernetes.com/description: "Manage repository mirrors"
    homepage.shamubernetes.com/group: "Infrastructure"
    homepage.shamubernetes.com/order: "40"
    homepage.shamubernetes.com/favorite: "false"
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  hostnames:
  - "gitmirror.${HOME_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /webhooks/github
    backendRefs:
    - name: git-mirror-operator-github-webhook-service
      port: 8082
